--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                 <div class="tool-content">
                     <h3>Image Compressor</h3>
                     <p>Reduce image file size without losing quality. Support for JPG, PNG, WebP.</p>
-                    <a href="/img-compress.html" class="tool-btn">Use Tool</a>
+                    <a href="/Tool/img-compress.html" class="tool-btn">Use Tool</a>
                 </div>
             </div>
             
