--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                 <div class="tool-content">
                     <h3>PDF Compressor</h3>
                     <p>Compress PDF files to reduce their size while maintaining quality.</p>
-                    <a href="#" class="tool-btn">Use Tool</a>
+                    <a href="/Tool/pdf-compress.html" class="tool-btn">Use Tool</a>
                 </div>
             </div>
             
