--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                 <div class="tool-content">
                     <h3>Image Converter</h3>
                     <p>Convert between different image formats: JPG, PNG, WebP, GIF and more.</p>
-                    <a href="#" class="tool-btn">Use Tool</a>
+                    <a href="/Tool/img-converter.html" class="tool-btn">Use Tool</a>
                 </div>
             </div>
             
