--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                 <div class="tool-content">
                     <h3>PDF to Image</h3>
                     <p>Convert PDF pages to high-quality images in various formats.</p>
-                    <a href="#" class="tool-btn">Use Tool</a>
+                    <a href="/Tool/pdf-img-convert.html" class="tool-btn">Use Tool</a>
                 </div>
             </div>
             
