--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                 <div class="tool-content">
                     <h3>Image Resizer</h3>
                     <p>Resize your images without quality loss. Custom dimensions available.</p>
-                    <a href="#" class="tool-btn">Use Tool</a>
+                    <a href="/Tool/img-resizer.html" class="tool-btn">Use Tool</a>
                 </div>
             </div>
             
