--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                 <div class="tool-content">
                     <h3>PDF Protector</h3>
                     <p>Add password protection to your PDF files to keep them secure.</p>
-                    <a href="#" class="tool-btn">Use Tool</a>
+                    <a href="/Tool/pdf-pro.html" class="tool-btn">Use Tool</a>
                 </div>
             </div>
         </div>
