--- a/pdf-pro.html
+++ b/pdf-pro.html
@@ -536,6 +536,17 @@
     <button class="theme-toggle">
         <i class="fas fa-moon"></i> Dark Mode
     </button>
+<header>
+    <div class="logo">
+        <h1>PDF Protector Pro</h1>
+    </div>
+    <nav>
+        <a href="https://toolvista.github.io/Tool/" target="_blank" style="display:inline-flex; align-items:center; gap:6px; font-weight:600; color:var(--accent-blue); text-decoration:none;">
+            <img src="https://toolvista.github.io/Tool/favicon.png" alt="Toolkit Logo" style="height:20px; width:20px; border-radius:4px;">
+            Toolkit
+        </a>
+    </nav>
+</header>
 
     <div class="container">
         <header>
