--- a/pdf-pro.html
+++ b/pdf-pro.html
@@ -533,6 +533,10 @@
     </style>
 </head>
 <body>
+    <div class="logo">
+                <i class="fas fa-tools logo-icon"></i>
+                <h1>ToolKit</h1>
+            </div>
     <button class="theme-toggle">
         <i class="fas fa-moon"></i> Dark Mode
     </button>
