--- a/pdf-pro.html
+++ b/pdf-pro.html
@@ -538,12 +538,66 @@
         <i class="fas fa-moon"></i> Dark Mode
     </button>
 
+<!-- Tailwind CDN (अगर पहले से नहीं है तो ये add कर लेना <head> में) -->
+<script src="https://cdn.tailwindcss.com"></script>
+
+<!-- Navbar Start -->
+<nav class="w-full bg-[#0b1526] px-6 py-4 flex items-center justify-between shadow-md">
+  <!-- Logo -->
+  <a href="#" class="flex items-center space-x-2">
+    <div class="w-6 h-6 bg-gradient-to-r from-green-400 to-teal-500 rounded-full"></div>
+    <span class="text-xl font-bold text-teal-300">ToolKit</span>
+  </a>
+
+  <!-- Desktop Menu -->
+  <ul class="hidden md:flex space-x-8 font-medium">
+    <li><a href="#" class="hover:text-teal-400">Home</a></li>
+    <li><a href="#" class="hover:text-teal-400">Image Tools</a></li>
+    <li><a href="#" class="hover:text-teal-400">PDF Tools</a></li>
+    <li><a href="#" class="hover:text-teal-400">Pricing</a></li>
+    <li><a href="#" class="hover:text-teal-400">About</a></li>
+  </ul>
+
+  <!-- Buttons -->
+  <div class="hidden md:flex space-x-4">
+    <button class="px-4 py-2 rounded-lg bg-gradient-to-r from-green-400 to-teal-500 text-sm font-semibold">Login</button>
+    <button class="px-4 py-2 rounded-lg bg-gradient-to-r from-purple-400 to-blue-500 text-sm font-semibold">Sign Up</button>
+  </div>
+
+  <!-- Mobile Hamburger -->
+  <div class="md:hidden">
+    <button id="menu-btn" class="focus:outline-none">
+      <svg class="w-7 h-7 text-white" fill="none" stroke="currentColor" stroke-width="2"
+           viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round"
+              d="M4 6h16M4 12h16M4 18h16"/>
+      </svg>
+    </button>
+  </div>
+</nav>
+
+<!-- Mobile Menu -->
+<div id="menu" class="hidden md:hidden bg-[#0b1526] px-6 py-4 space-y-4">
+  <a href="#" class="block hover:text-teal-400">Home</a>
+  <a href="#" class="block hover:text-teal-400">Image Tools</a>
+  <a href="#" class="block hover:text-teal-400">PDF Tools</a>
+  <a href="#" class="block hover:text-teal-400">Pricing</a>
+  <a href="#" class="block hover:text-teal-400">About</a>
+  <button class="w-full px-4 py-2 rounded-lg bg-gradient-to-r from-green-400 to-teal-500 text-sm font-semibold">Login</button>
+  <button class="w-full px-4 py-2 rounded-lg bg-gradient-to-r from-purple-400 to-blue-500 text-sm font-semibold">Sign Up</button>
+</div>
+<!-- Navbar End -->
+
+<!-- Script -->
+<script>
+  const btn = document.getElementById('menu-btn');
+  const menu = document.getElementById('menu');
+  btn.addEventListener('click', () => {
+    menu.classList.toggle('hidden');
+  });
+</script>
 
     <div class="container">
-        <div class="logo">
-                <i class="fas fa-tools logo-icon"></i>
-                <h1>ToolKit</h1>
-            </div>
         <header>
             <h1>PDF Protector Pro</h1>
             <p>Add password protection to your PDF files to keep them secure</p>
