--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
         
         <div class="tools-grid">
             <!-- Image & Graphics Tools -->
-            <div class="tool-card" data-category="image" onclick="window.location.href='/tools/image-compressor.html'">
+            <div class="tool-card" data-category="image" onclick="window.location.href='/Tool/img-compress.html">
                 <i class="fas fa-compress-arrows-alt"></i>
                 <h3>Image Compressor</h3>
                 <p>Compress images without losing quality.</p>
