--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                 <p>Resize images to custom dimensions.</p>
             </div>
             
-            <div class="tool-card" data-category="image" onclick="window.location.href='/tools/image-cropper.html'">
+            <div class="tool-card" data-category="image" onclick="window.location.href='/Tool/img-cropper.html'">
                 <i class="fas fa-crop-alt"></i>
                 <h3>Image Cropper</h3>
                 <p>Crop images to required sizes.</p>
