--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                 <p>Compress images without losing quality.</p>
             </div>
             
-            <div class="tool-card" data-category="image" onclick="window.location.href='/tools/image-resizer.html'">
+            <div class="tool-card" data-category="image" onclick="window.location.href='/Tools/img-resizer.html'">
                 <i class="fas fa-expand-arrows-alt"></i>
                 <h3>Image Resizer</h3>
                 <p>Resize images to custom dimensions.</p>
