--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                 <p>Crop images to required sizes.</p>
             </div>
             
-            <div class="tool-card" data-category="image" onclick="window.location.href='/tools/image-converter.html'">
+            <div class="tool-card" data-category="image" onclick="window.location.href='/Tool/img-converter.html'">
                 <i class="fas fa-exchange-alt"></i>
                 <h3>Image Converter</h3>
                 <p>Convert between JPG, PNG, WEBP formats.</p>
