--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                 <p>Convert between JPG, PNG, WEBP formats.</p>
             </div>
             
-            <div class="tool-card" data-category="image" onclick="window.location.href='/tools/image-rotator.html'">
+            <div class="tool-card" data-category="image" onclick="window.location.href='/Tool/img-rotate.html'">
                 <i class="fas fa-sync"></i>
                 <h3>Image Rotator</h3>
                 <p>Rotate or flip images.</p>
