--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                 <p>Rotate or flip images.</p>
             </div>
             
-            <div class="tool-card" data-category="image" onclick="window.location.href='/tools/color-picker.html'">
+            <div class="tool-card" data-category="image" onclick="window.location.href='/Tool/img-color.html'">
                 <i class="fas fa-eye-dropper"></i>
                 <h3>Image Color Picker</h3>
                 <p>Get HEX/RGB colors from image.</p>
