--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                 <p>Get HEX/RGB colors from image.</p>
             </div>
             
-            <div class="tool-card" data-category="image" onclick="window.location.href='/tools/image-to-pdf.html'">
+            <div class="tool-card" data-category="image" onclick="window.location.href='/Tool/pdf-img-convert.html'">
                 <i class="fas fa-file-pdf"></i>
                 <h3>Image to PDF Converter</h3>
                 <p>Convert images into PDF.</p>
