--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                 <p>Convert images into PDF.</p>
             </div>
             
-            <div class="tool-card" data-category="image" onclick="window.location.href='/tools/background-remover.html'">
+            <div class="tool-card" data-category="image" onclick="window.location.href='/Tool/img-bgremover.html'">
                 <i class="fas fa-cut"></i>
                 <h3>Background Remover</h3>
                 <p>Remove image background.</p>
