--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                 <p>Remove image background.</p>
             </div>
             
-            <div class="tool-card" data-category="image" onclick="window.location.href='/tools/watermark-adder.html'">
+            <div class="tool-card" data-category="image" onclick="window.location.href='/Tool/img-watermark.html'">
                 <i class="fas fa-trademark"></i>
                 <h3>Watermark Adder</h3>
                 <p>Add watermarks to images.</p>
