--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                 <p>Add watermarks to images.</p>
             </div>
             
-            <div class="tool-card" data-category="image" onclick="window.location.href='/tools/meme-generator.html'">
+            <div class="tool-card" data-category="image" onclick="window.location.href='/Tool/img-meme.html'">
                 <i class="fas fa-grin-squint-tears"></i>
                 <h3>Meme Generator</h3>
                 <p>Create memes online.</p>
