--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 <!-- Navbar Start -->
 <nav class="w-full bg-[#0b1526] px-6 py-4 flex items-center justify-between shadow-md">
   <!-- Logo -->
-  <a href="#" class="flex items-center space-x-2">
+  <a href="/Tool/index.html" class="flex items-center space-x-2">
     <div class="w-6 h-6 bg-gradient-to-r from-green-400 to-teal-500 rounded-full"></div>
     <span class="text-xl font-bold text-teal-300">ToolKit</span>
   </a>
