--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
     <li><a href="#" class="hover:text-teal-400">Image Tools</a></li>
     <li><a href="#" class="hover:text-teal-400">PDF Tools</a></li>
     <li><a href="#" class="hover:text-teal-400">Pricing</a></li>
-    <li><a href="#" class="hover:text-teal-400">About</a></li>
+    <li><a href="/Tool/about.html" class="hover:text-teal-400">About</a></li>
   </ul>
 
   <!-- Buttons -->
