--- a/img-compress.html
+++ b/img-compress.html
@@ -408,7 +408,10 @@
     <button class="theme-toggle">
         <i class="fas fa-moon"></i> Dark Mode
     </button>
-<!-- Tailwind CDN (अगर पहले से नहीं है तो ये add कर लेना <head> में) -->
+
+
+    <div class="container">
+        <!-- Tailwind CDN -->
 <script src="https://cdn.tailwindcss.com"></script>
 
 <!-- Navbar Start -->
@@ -421,11 +424,12 @@
 
   <!-- Desktop Menu -->
   <ul class="hidden md:flex space-x-8 font-medium text-white">
-    <li><a href="#" class="hover:text-teal-400 transition">Home</a></li>
-    <li><a href="#" class="hover:text-teal-400 transition">Image Tools</a></li>
-    <li><a href="#" class="hover:text-teal-400 transition">PDF Tools</a></li>
-    <li><a href="#" class="hover:text-teal-400 transition">Pricing</a></li>
-    <li><a href="#" class="hover:text-teal-400 transition">About</a></li>
+    <li><a href="/Tool/index.html" class="hover:text-teal-400 transition">Home</a></li>
+    <li><a href="/Tool/about.html" class="hover:text-teal-400 transition">About</a></li>
+    <li><a href="/Tool/contect.html" class="hover:text-teal-400 transition">Contact Us</a></li>
+    <li><a href="/Tool/privacy.html" class="hover:text-teal-400 transition">Privacy Policy</a></li>
+    <li><a href="/Tool/term.html" class="hover:text-teal-400 transition">Terms & Conditions</a></li>
+    <li><a href="/Tool/desclaimar.html" class="hover:text-teal-400 transition">Disclaimer</a></li>
   </ul>
 
   <!-- Buttons (Desktop) -->
@@ -448,11 +452,13 @@
 
 <!-- Mobile Menu -->
 <div id="menu" class="hidden md:hidden flex flex-col bg-[#0b1526] px-6 py-4 space-y-4 text-white transition-all duration-300 ease-in-out">
-  <a href="#" class="block hover:text-teal-400 transition">Home</a>
-  <a href="#" class="block hover:text-teal-400 transition">Image Tools</a>
-  <a href="#" class="block hover:text-teal-400 transition">PDF Tools</a>
-  <a href="#" class="block hover:text-teal-400 transition">Pricing</a>
-  <a href="#" class="block hover:text-teal-400 transition">About</a>
+  <a href="/Tool/index.html" class="block hover:text-teal-400 transition">Home</a>
+  <a href="/Tool/about.html" class="block hover:text-teal-400 transition">About</a>
+  <a href="/Tool/contect.html" class="block hover:text-teal-400 transition">Contact Us</a>
+  <a href="/Tool/privacy.html" class="block hover:text-teal-400 transition">Privacy Policy</a>
+  <a href="/Tool/term.html" class="block hover:text-teal-400 transition">Terms & Conditions</a>
+  <a href="/Tool/desclaimar.html" class="block hover:text-teal-400 transition">Disclaimer</a>
+  
   <button class="w-full px-4 py-2 rounded-lg bg-gradient-to-r from-green-400 to-teal-500 text-sm font-semibold text-white shadow-md hover:opacity-90 transition">Login</button>
   <button class="w-full px-4 py-2 rounded-lg bg-gradient-to-r from-purple-400 to-blue-500 text-sm font-semibold text-white shadow-md hover:opacity-90 transition">Sign Up</button>
 </div>
@@ -468,7 +474,6 @@
   });
 </script>
 
-    <div class="container">
         <header>
             <h1>ImageCompress Pro</h1>
             <p>Optimize your images without losing quality</p>
