--- a/img-resizer.html
+++ b/img-resizer.html
@@ -519,6 +519,69 @@
     </button>
 
     <div class="container">
+        <!-- Tailwind CDN -->
+<script src="https://cdn.tailwindcss.com"></script>
+
+<!-- Navbar Start -->
+<nav class="w-full bg-[#0b1526] px-6 py-4 flex items-center justify-between shadow-md">
+  <!-- Logo -->
+  <a href="/Tool/index.html" class="flex items-center space-x-2">
+    <div class="w-6 h-6 bg-gradient-to-r from-green-400 to-teal-500 rounded-full"></div>
+    <span class="text-xl font-bold text-teal-300">ToolKit</span>
+  </a>
+
+  <!-- Desktop Menu -->
+  <ul class="hidden md:flex space-x-8 font-medium text-white">
+    <li><a href="/Tool/index.html" class="hover:text-teal-400 transition">Home</a></li>
+    <li><a href="/Tool/about.html" class="hover:text-teal-400 transition">About</a></li>
+    <li><a href="/Tool/contect.html" class="hover:text-teal-400 transition">Contact Us</a></li>
+    <li><a href="/Tool/privacy.html" class="hover:text-teal-400 transition">Privacy Policy</a></li>
+    <li><a href="/Tool/term.html" class="hover:text-teal-400 transition">Terms & Conditions</a></li>
+    <li><a href="/Tool/desclaimar.html" class="hover:text-teal-400 transition">Disclaimer</a></li>
+  </ul>
+
+  <!-- Buttons (Desktop) -->
+  <div class="hidden md:flex space-x-4">
+    <button class="px-4 py-2 rounded-lg bg-gradient-to-r from-green-400 to-teal-500 text-sm font-semibold text-white shadow-md hover:opacity-90 transition">Login</button>
+    <button class="px-4 py-2 rounded-lg bg-gradient-to-r from-purple-400 to-blue-500 text-sm font-semibold text-white shadow-md hover:opacity-90 transition">Sign Up</button>
+  </div>
+
+  <!-- Mobile Hamburger -->
+  <div class="md:hidden">
+    <button id="menu-btn" class="focus:outline-none">
+      <svg class="w-7 h-7 text-white" fill="none" stroke="currentColor" stroke-width="2"
+           viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round"
+              d="M4 6h16M4 12h16M4 18h16"/>
+      </svg>
+    </button>
+  </div>
+</nav>
+
+<!-- Mobile Menu -->
+<div id="menu" class="hidden md:hidden flex flex-col bg-[#0b1526] px-6 py-4 space-y-4 text-white transition-all duration-300 ease-in-out">
+  <a href="/Tool/index.html" class="block hover:text-teal-400 transition">Home</a>
+  <a href="/Tool/about.html" class="block hover:text-teal-400 transition">About</a>
+  <a href="/Tool/contect.html" class="block hover:text-teal-400 transition">Contact Us</a>
+  <a href="/Tool/privacy.html" class="block hover:text-teal-400 transition">Privacy Policy</a>
+  <a href="/Tool/term.html" class="block hover:text-teal-400 transition">Terms & Conditions</a>
+  <a href="/Tool/desclaimar.html" class="block hover:text-teal-400 transition">Disclaimer</a>
+  
+  <button class="w-full px-4 py-2 rounded-lg bg-gradient-to-r from-green-400 to-teal-500 text-sm font-semibold text-white shadow-md hover:opacity-90 transition">Login</button>
+  <button class="w-full px-4 py-2 rounded-lg bg-gradient-to-r from-purple-400 to-blue-500 text-sm font-semibold text-white shadow-md hover:opacity-90 transition">Sign Up</button>
+</div>
+<!-- Navbar End -->
+
+<!-- Script -->
+<script>
+  const btn = document.getElementById('menu-btn');
+  const menu = document.getElementById('menu');
+
+  btn.addEventListener('click', () => {
+    menu.classList.toggle('hidden');
+  });
+</script>
+
         <header>
             <h1>Image Resizer Pro</h1>
             <p>Resize your images without quality loss with custom dimensions</p>
