--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
                 <p>Convert PDF to images.</p>
             </div>
             
-            <div class="tool-card" data-category="pdf" onclick="window.location.href='/tools/pdf-compressor.html'">
+            <div class="tool-card" data-category="pdf" onclick="window.location.href='/Tool/pdf-compress.html'">
                 <i class="fas fa-compress-arrows-alt"></i>
                 <h3>PDF Compressor</h3>
                 <p>Reduce file size.</p>
