--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
                 <p>Convert Word to PDF.</p>
             </div>
             
-            <div class="tool-card" data-category="pdf" onclick="window.location.href='/tools/pdf-to-image.html'">
+            <div class="tool-card" data-category="pdf" onclick="window.location.href='/Tool/pdf-img-convert.html'">
                 <i class="fas fa-file-image"></i>
                 <h3>PDF to Image Converter</h3>
                 <p>Convert PDF to images.</p>
