--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
                 <p>Remove password.</p>
             </div>
             
-            <div class="tool-card" data-category="pdf" onclick="window.location.href='/tools/pdf-protect.html'">
+            <div class="tool-card" data-category="pdf" onclick="window.location.href='/Tool/pdf-img-convert.html'">
                 <i class="fas fa-lock"></i>
                 <h3>PDF Protect</h3>
                 <p>Add password.</p>
