--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                 <p>Create memes online.</p>
             </div>
             
-            <div class="tool-card" data-category="image" onclick="window.location.href='/tools/image-enhancer.html'">
+            <div class="tool-card" data-category="image" onclick="window.location.href='/Tool/img-enhancer.html'">
                 <i class="fas fa-magic"></i>
                 <h3>Image Enhancer</h3>
                 <p>Improve photo quality.</p>
