--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                 <p>Improve photo quality.</p>
             </div>
             
-            <div class="tool-card" data-category="image" onclick="window.location.href='/tools/blur-tool.html'">
+            <div class="tool-card" data-category="image" onclick="window.location.href='/Tool/img-blur.html'">
                 <i class="fas fa-blur"></i>
                 <h3>Blur Tool</h3>
                 <p>Blur parts of image.</p>
