--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                 <p>Blur parts of image.</p>
             </div>
             
-            <div class="tool-card" data-category="image" onclick="window.location.href='/tools/bw-converter.html'">
+            <div class="tool-card" data-category="image" onclick="window.location.href='/Tool/img-b&w.html'">
                 <i class="fas fa-moon"></i>
                 <h3>Black & White Converter</h3>
                 <p>Turn images into grayscale.</p>
