--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                 <p>Turn images into grayscale.</p>
             </div>
             
-            <div class="tool-card" data-category="image" onclick="window.location.href='/tools/image-sharpener.html'">
+            <div class="tool-card" data-category="image" onclick="window.location.href='/Tool/img-sharpner.html'">
                 <i class="fas fa-cut"></i>
                 <h3>Image Sharpener</h3>
                 <p>Fix blurry photos.</p>
