--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                 <p>Fix blurry photos.</p>
             </div>
             
-            <div class="tool-card" data-category="image" onclick="window.location.href='/tools/collage-maker.html'">
+            <div class="tool-card" data-category="image" onclick="window.location.href='/Tool/img-combine.html'">
                 <i class="fas fa-th"></i>
                 <h3>Photo Collage Maker</h3>
                 <p>Combine photos into a collage.</p>
