--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                 <p>Combine photos into a collage.</p>
             </div>
             
-            <div class="tool-card" data-category="image" onclick="window.location.href='/tools/image-filter.html'">
+            <div class="tool-card" data-category="image" onclick="window.location.href='/Tool/img-filter.html'">
                 <i class="fas fa-filter"></i>
                 <h3>Image Filter Tool</h3>
                 <p>Add Instagram-like filters.</p>
