--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                 <p>Add Instagram-like filters.</p>
             </div>
             
-            <div class="tool-card" data-category="image" onclick="window.location.href='/tools/favicon-generator.html'">
+            <div class="tool-card" data-category="image" onclick="window.location.href='/Tool/img-favicon.html'">
                 <i class="fas fa-icons"></i>
                 <h3>Favicon Generator</h3>
                 <p>Create favicons for websites.</p>
