--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                 <p>Create favicons for websites.</p>
             </div>
             
-            <div class="tool-card" data-category="image" onclick="window.location.href='/tools/dpi-converter.html'">
+            <div class="tool-card" data-category="image" onclick="window.location.href='/Tool/img-dpi.html'">
                 <i class="fas fa-ruler"></i>
                 <h3>Image DPI Converter</h3>
                 <p>Change image DPI.</p>
