--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                 <p>Change image DPI.</p>
             </div>
             
-            <div class="tool-card" data-category="image" onclick="window.location.href='/tools/aspect-ratio.html'">
+            <div class="tool-card" data-category="image" onclick="window.location.href='/Tool/img-aspect.html'">
                 <i class="fas fa-calculator"></i>
                 <h3>Aspect Ratio Calculator</h3>
                 <p>Maintain proper proportions.</p>
