--- a/index.html
+++ b/index.html
@@ -491,23 +491,11 @@
                 <p>Maintain proper proportions.</p>
             </div>
             
-            <div class="tool-card" data-category="image" onclick="window.location.href='/tools/image-frame.html'">
+            <div class="tool-card" data-category="image" onclick="window.location.href='/Tool/img-frame.html'">
                 <i class="fas fa-border-style"></i>
                 <h3>Image Frame & Border Tool</h3>
                 <p>Add stylish frames.</p>
             </div>
-
-			<!--Ads -->
-		<script type="text/javascript">
-	atOptions = {
-		'key' : 'dfb13df8c68bb9b06c88d4a4fde08313',
-		'format' : 'iframe',
-		'height' : 90,
-		'width' : 728,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/dfb13df8c68bb9b06c88d4a4fde08313/invoke.js"></script>
         
             <!-- Text & Writing Tools -->
             <div class="tool-card" data-category="text" onclick="window.location.href='/tools/case-converter.html'">
