--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
             </div>
         
             <!-- Text & Writing Tools -->
-            <div class="tool-card" data-category="text" onclick="window.location.href='/tools/case-converter.html'">
+            <div class="tool-card" data-category="text" onclick="window.location.href='/Tool/text-case.html'">
                 <i class="fas fa-font"></i>
                 <h3>Case Converter</h3>
                 <p>Convert to UPPER/lower/Title case.</p>
