--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                 <p>Convert to UPPER/lower/Title case.</p>
             </div>
             
-            <div class="tool-card" data-category="text" onclick="window.location.href='/tools/word-counter.html'">
+            <div class="tool-card" data-category="text" onclick="window.location.href='/Tool/word-count.html'">
                 <i class="fas fa-sort-amount-down"></i>
                 <h3>Word Counter</h3>
                 <p>Count words, characters, sentences.</p>
