--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                 <p>Count words, characters, sentences.</p>
             </div>
             
-            <div class="tool-card" data-category="text" onclick="window.location.href='/tools/line-breaks-remover.html'">
+            <div class="tool-card" data-category="text" onclick="window.location.href='/Tool/line-break.html'">
                 <i class="fas fa-text-width"></i>
                 <h3>Remove Line Breaks</h3>
                 <p>Clean up text.</p>
