--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                 <p>Clean up text.</p>
             </div>
             
-            <div class="tool-card" data-category="text" onclick="window.location.href='/tools/lorem-ipsum.html'">
+            <div class="tool-card" data-category="text" onclick="window.location.href='/Tool/lorem.html'">
                 <i class="fas fa-paragraph"></i>
                 <h3>Lorem Ipsum Generator</h3>
                 <p>Dummy text generator.</p>
