--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                 <p>Dummy text generator.</p>
             </div>
             
-            <div class="tool-card" data-category="text" onclick="window.location.href='/tools/reverse-text.html'">
+            <div class="tool-card" data-category="text" onclick="window.location.href='/Tool/rivers-text.html'">
                 <i class="fas fa-exchange-alt"></i>
                 <h3>Reverse Text Generator</h3>
                 <p>Flip text.</p>
