--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                 <p>Flip text.</p>
             </div>
             
-            <div class="tool-card" data-category="text" onclick="window.location.href='/tools/text-repeater.html'">
+            <div class="tool-card" data-category="text" onclick="window.location.href='/Tool/text-repeater.html'">
                 <i class="fas fa-redo"></i>
                 <h3>Text Repeater</h3>
                 <p>Repeat text multiple times.</p>
