--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                 <p>Repeat text multiple times.</p>
             </div>
             
-            <div class="tool-card" data-category="text" onclick="window.location.href='/tools/password-generator.html'">
+            <div class="tool-card" data-category="text" onclick="window.location.href='/Tool/pass-gen.html'">
                 <i class="fas fa-key"></i>
                 <h3>Password Generator</h3>
                 <p>Strong password creator.</p>
