--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                 <p>Strong password creator.</p>
             </div>
             
-            <div class="tool-card" data-category="text" onclick="window.location.href='/tools/hashtag-generator.html'">
+            <div class="tool-card" data-category="text" onclick="window.location.href='/Tool/hashtag-gen.html'">
                 <i class="fas fa-hashtag"></i>
                 <h3>Hashtag Generator</h3>
                 <p>Generate hashtags from keywords.</p>
