--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                 <p>Convert text to emojis.</p>
             </div>
             
-            <div class="tool-card" data-category="text" onclick="window.location.href='/tools/random-quote.html'">
+            <div class="tool-card" data-category="text" onclick="window.location.href='/Tool/quote-gen.html'">
                 <i class="fas fa-quote-right"></i>
                 <h3>Random Quote Generator</h3>
                 <p>Display quotes.</p>
