--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
                 <p>Display quotes.</p>
             </div>
             
-            <div class="tool-card" data-category="text" onclick="window.location.href='/tools/text-to-binary.html'">
+            <div class="tool-card" data-category="text" onclick="window.location.href='/Tool/binary-con.html'">
                 <i class="fas fa-code"></i>
                 <h3>Text to Binary Converter</h3>
                 <p>Convert text to binary.</p>
