--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
                 <p>Convert text to binary.</p>
             </div>
             
-            <div class="tool-card" data-category="text" onclick="window.location.href='/tools/binary-to-text.html'">
+            <div class="tool-card" data-category="text" onclick="window.location.href='/Tool/binary-text.html'">
                 <i class="fas fa-file-code"></i>
                 <h3>Binary to Text Converter</h3>
                 <p>Decode binary.</p>
