--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
                 <p>Decode binary.</p>
             </div>
             
-            <div class="tool-card" data-category="text" onclick="window.location.href='/tools/text-to-speech.html'">
+            <div class="tool-card" data-category="text" onclick="window.location.href='/Tool/text-speech.html'">
                 <i class="fas fa-volume-up"></i>
                 <h3>Text to Speech Tool</h3>
                 <p>Convert text into audio.</p>
