--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
                 <p>Convert text into audio.</p>
             </div>
             
-            <div class="tool-card" data-category="text" onclick="window.location.href='/tools/speech-to-text.html'">
+            <div class="tool-card" data-category="text" onclick="window.location.href='/Tool/speech-text.html'">
                 <i class="fas fa-microphone"></i>
                 <h3>Speech to Text Tool</h3>
                 <p>Convert audio into text.</p>
