--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
                 <p>Check if word/sentence is palindrome.</p>
             </div>
             
-            <div class="tool-card" data-category="text" onclick="window.location.href='/tools/grammar-checker.html'">
+            <div class="tool-card" data-category="text" onclick="window.location.href='/Tool/grammer-che.html'">
                 <i class="fas fa-spell-check"></i>
                 <h3>Grammar Checker</h3>
                 <p>Check grammar mistakes.</p>
