--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
                 <p>Check grammar mistakes.</p>
             </div>
             
-            <div class="tool-card" data-category="text" onclick="window.location.href='/tools/spell-checker.html'">
+            <div class="tool-card" data-category="text" onclick="window.location.href='/Tool/spell-checker.html'">
                 <i class="fas fa-check-double"></i>
                 <h3>Spell Checker</h3>
                 <p>Correct spelling errors.</p>
