--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
                 <p>Correct spelling errors.</p>
             </div>
 
-            <div class="tool-card" data-category="text" onclick="window.location.href='/tools/anagram-solver.html'">
+            <div class="tool-card" data-category="text" onclick="window.location.href='/Tool/anagram-solver.html'">
                 <i class="fas fa-random"></i>
                 <h3>Anagram Solver</h3>
                 <p>Rearrange words into anagrams.</p>
