--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
                 <p>Rearrange words into anagrams.</p>
             </div>
             
-            <div class="tool-card" data-category="text" onclick="window.location.href='/tools/word-scrambler.html'">
+            <div class="tool-card" data-category="text" onclick="window.location.href='/Tool/word-scrambler.html'">
                 <i class="fas fa-random"></i>
                 <h3>Word Scrambler</h3>
                 <p>Shuffle letters.</p>
