--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
                 <p>Shuffle letters.</p>
             </div>
             
-            <div class="tool-card" data-category="text" onclick="window.location.href='/tools/character-counter.html'">
+            <div class="tool-card" data-category="text" onclick="window.location.href='/Tool/character-counter.html'">
                 <i class="fas fa-font"></i>
                 <h3>Character Counter</h3>
                 <p>Count characters including spaces.</p>
