--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
         
             
             <!-- PDF Tools -->
-            <div class="tool-card" data-category="pdf" onclick="window.location.href='/tools/pdf-merger.html'">
+            <div class="tool-card" data-category="pdf" onclick="window.location.href='/Tool/pdf-merger.html'">
                 <i class="fas fa-object-group"></i>
                 <h3>PDF Merger</h3>
                 <p>Merge PDFs.</p>
