--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
                 <p>Merge PDFs.</p>
             </div>
             
-            <div class="tool-card" data-category="pdf" onclick="window.location.href='/tools/pdf-splitter.html'">
+            <div class="tool-card" data-category="pdf" onclick="window.location.href='/Tool/pdf-splitter.html'">
                 <i class="fas fa-cut"></i>
                 <h3>PDF Splitter</h3>
                 <p>Split PDFs.</p>
