--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
                 <p>Split PDFs.</p>
             </div>
             
-            <div class="tool-card" data-category="pdf" onclick="window.location.href='/tools/pdf-to-word.html'">
+            <div class="tool-card" data-category="pdf" onclick="window.location.href='/Tool/pdf-to-word.html'">
                 <i class="fas fa-file-word"></i>
                 <h3>PDF to Word Converter</h3>
                 <p>Convert PDF to Word.</p>
