--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
                 <p>Convert PDF to Word.</p>
             </div>
             
-            <div class="tool-card" data-category="pdf" onclick="window.location.href='/tools/word-to-pdf.html'">
+            <div class="tool-card" data-category="pdf" onclick="window.location.href='/Tool/word-to-pdf.html'">
                 <i class="fas fa-file-pdf"></i>
                 <h3>Word to PDF Converter</h3>
                 <p>Convert Word to PDF.</p>
