--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
                 <p>Reduce file size.</p>
             </div>
             
-            <div class="tool-card" data-category="pdf" onclick="window.location.href='/tools/pdf-rotator.html'">
+            <div class="tool-card" data-category="pdf" onclick="window.location.href='/Tool/pdf-rotator.html'">
                 <i class="fas fa-redo"></i>
                 <h3>PDF Page Rotator</h3>
                 <p>Rotate pages.</p>
