--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
                 <p>Rotate pages.</p>
             </div>
             
-            <div class="tool-card" data-category="pdf" onclick="window.location.href='/tools/pdf-unlocker.html'">
+            <div class="tool-card" data-category="pdf" onclick="window.location.href='/Tool/pdf-unlocker.html'">
                 <i class="fas fa-unlock"></i>
                 <h3>PDF Unlocker</h3>
                 <p>Remove password.</p>
