--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                 <p>Generate hashtags from keywords.</p>
             </div>
             
-            <div class="tool-card" data-category="text" onclick="window.location.href='/tools/emoji-translator.html'">
+            <div class="tool-card" data-category="text" onclick="window.location.href='/Tool/emoji-translator.html'">
                 <i class="fas fa-smile"></i>
                 <h3>Emoji Translator</h3>
                 <p>Convert text to emojis.</p>
