--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
                 <p>Add password.</p>
             </div>
             
-            <div class="tool-card" data-category="pdf" onclick="window.location.href='/tools/pdf-metadata.html'">
+            <div class="tool-card" data-category="pdf" onclick="window.location.href='/Tool/pdf-metadata.html'">
                 <i class="fas fa-info-circle"></i>
                 <h3>PDF Metadata Editor</h3>
                 <p>Edit info.</p>
