--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
                 <p>Edit info.</p>
             </div>
             
-            <div class="tool-card" data-category="pdf" onclick="window.location.href='/tools/pdf-extractor.html'">
+            <div class="tool-card" data-category="pdf" onclick="window.location.href='/Tool/pdf-extractor.html'">
                 <i class="fas fa-cut"></i>
                 <h3>PDF Page Extractor</h3>
                 <p>Extract specific pages.</p>
