--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
                 <p>Extract specific pages.</p>
             </div>
             
-            <div class="tool-card" data-category="pdf" onclick="window.location.href='/tools/pdf-to-ppt.html'">
+            <div class="tool-card" data-category="pdf" onclick="window.location.href='/Tool/pdf-to-ppt.html'">
                 <i class="fas fa-file-powerpoint"></i>
                 <h3>PDF to PPT Converter</h3>
                 <p>Convert PDF to PowerPoint.</p>
