--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
                 <p>Convert PDF to PowerPoint.</p>
             </div>
             
-            <div class="tool-card" data-category="pdf" onclick="window.location.href='/tools/ppt-to-pdf.html'">
+            <div class="tool-card" data-category="pdf" onclick="window.location.href='/Tool/ppt-to-pdf.html'">
                 <i class="fas fa-file-pdf"></i>
                 <h3>PPT to PDF Converter</h3>
                 <p>Convert PPT to PDF.</p>
