--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
                 <p>Convert PPT to PDF.</p>
             </div>
 
-            <div class="tool-card" data-category="pdf" onclick="window.location.href='/tools/pdf-to-excel.html'">
+            <div class="tool-card" data-category="pdf" onclick="window.location.href='/Tool/pdf-to-excel.html'">
                 <i class="fas fa-file-excel"></i>
                 <h3>PDF to Excel Converter</h3>
                 <p>Convert PDF tables to Excel.</p>
