--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
                 <p>Convert PDF tables to Excel.</p>
             </div>
             
-            <div class="tool-card" data-category="pdf" onclick="window.location.href='/tools/excel-to-pdf.html'">
+            <div class="tool-card" data-category="pdf" onclick="window.location.href='/Tool/excel-to-pdf.html'">
                 <i class="fas fa-file-pdf"></i>
                 <h3>Excel to PDF Converter</h3>
                 <p>Convert Excel to PDF.</p>
