--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
                 <p>Convert Excel to PDF.</p>
             </div>
             
-            <div class="tool-card" data-category="pdf" onclick="window.location.href='/tools/image-to-pdf.html'">
+            <div class="tool-card" data-category="pdf" onclick="window.location.href='/Tool/image-to-pdf.html'">
                 <i class="fas fa-file-pdf"></i>
                 <h3>Image to PDF</h3>
                 <p>Convert photos to PDF.</p>
