--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
                 <p>Convert photos to PDF.</p>
             </div>
             
-            <div class="tool-card" data-category="pdf" onclick="window.location.href='/tools/pdf-to-text.html'">
+            <div class="tool-card" data-category="pdf" onclick="window.location.href='/Tool/pdf-to-text.html'">
                 <i class="fas fa-file-alt"></i>
                 <h3>PDF to Text Extractor</h3>
                 <p>Extract plain text.</p>
