--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
                 <p>Extract plain text.</p>
             </div>
             
-            <div class="tool-card" data-category="pdf" onclick="window.location.href='/tools/pdf-watermark.html'">
+            <div class="tool-card" data-category="pdf" onclick="window.location.href='/Tool/pdf-watermark.html'">
                 <i class="fas fa-tint"></i>
                 <h3>PDF Watermark Tool</h3>
                 <p>Add/remove watermark.</p>
