--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
                 <p>Add/remove watermark.</p>
             </div>
             
-            <div class="tool-card" data-category="pdf" onclick="window.location.href='/tools/pdf-page-numbers.html'">
+            <div class="tool-card" data-category="pdf" onclick="window.location.href='/Tool/pdf-page-numbers.html'">
                 <i class="fas fa-list-ol"></i>
                 <h3>PDF Page Number Adder</h3>
                 <p>Add page numbers.</p>
